--- a/SunnyMore/index.html
+++ b/SunnyMore/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Sunny More - Product Designer | UI/UX Designer Based in India</title>
+    <title>Sunny More - UI/UX Designer Based in India</title>
     <meta name="description" content="Sunny More is an experienced Product Designer specializing in UI/UX design, mobile app design, and web design. 12+ years of experience with 1.2k+ worldwide clients and 8 awards.">
     <meta name="keywords" content="Product Designer, UI/UX Designer, Mobile App Design, Web Design, Brand Identity, Interaction Design, India, Sunny More">
     <meta name="author" content="Sunny More">
