--- a/SunnyMore/index.html
+++ b/SunnyMore/index.html
@@ -67,7 +67,7 @@
         "addressCountry": "IN",
         "addressLocality": "India"
       },
-    "email": "sunnymore09@gmail.com",
+    "email": "sunny.more90@gmail.com",
       "knowsAbout": ["UI/UX Design", "Product Design", "Mobile App Design", "Web Design", "Brand Identity", "Interaction Design", "Webflow Development"],
       "award": "8 Design Awards",
       "alumni": "12+ Years Experience",
@@ -945,7 +945,7 @@
                             <div class="flex flex-col flex-wrap gap-y-2">
                                 <span class="text-orange text-lg font-normal leading-none">SAY HELLO!</span>
                                 <h4 class="text-white text-2xl xl:text-[32px] font-bold font-Syne leading-none">
-                                    sunnymore09@gmail.com
+                                    sunny.more90@gmail.com
                                 </h4>
                             </div>
                         </div>
@@ -1147,7 +1147,7 @@
                                                 <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
                                                     Email</span>
                                                 <span class="text-black-800 text-2xl font-bold font-Syne leading-8">
-                                                    sunnymore09@gmail.com</span>
+                                                    sunny.more90@gmail.com</span>
                                             </li>
                                             <li class="gap-10 inline-flex items-center">
                                                 <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
@@ -1536,7 +1536,7 @@
                                 </span>
                                 <div class="flex flex-wrap flex-col flex-1">
                                     <span class="paragraph !leading-none">Email us</span>
-                                    <h5 class="text-xl font-bold font-Syne text-black-800 leading-7">sunnymore09@gmail.com
+                                    <h5 class="text-xl font-bold font-Syne text-black-800 leading-7">sunny.more90@gmail.com
                                     </h5>
                                 </div>
                             </div>
@@ -1762,7 +1762,7 @@
                             class="py-9 px-7 border-border-white border rounded-2xl flex flex-col justify-between group">
                             <h3 class="text-xl font-bold font-Syne text-white">Looking for a hectic designer?</h3>
                             <div class="flex justify-between items-center">
-                                <p class="text-2xl font-bold font-Syne leading-none text-orange ">sunnymore09@gmail.com</p>
+                                <p class="text-2xl font-bold font-Syne leading-none text-orange ">sunny.more90@gmail.com</p>
                                 <a href="#"
                                     class="text-white group-hover:animate-arrow-move-up group-hover:text-orange">
                                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
