--- a/SunnyMore/index.html
+++ b/SunnyMore/index.html
@@ -907,7 +907,7 @@
                         <span class="text-orange text-xl">Hello I’m</span>
                         <h3
                             class="text-black-800 text-4xl lg:text-5xl xl:text-[64px] tracking-[-1.5px] relative before:rounded-full before:bg-primary before:block before:absolute before:top-[2px] before:left-0 before:-z-[1] before:w-[36px] lg:before:w-[48px] xl:before:w-[64px] before:h-[36px] lg:before:h-[48px] xl:before:h-[64px]">
-                            Sunny More, <br>UI-UX Designer
+                            Sunny More
                         </h3>
 
                         <h4 class="text-black-800 text-2xl lg:text-3xl xl:text-[44px] mt-3 mb-4">Based in Vadodara,
