--- a/SunnyMore/index.html
+++ b/SunnyMore/index.html
@@ -156,7 +156,7 @@
             <div>
                 <div class="flex flex-wrap justify-between items-center border-b border-border-white mb-[80px]">
                     <a href="index.html">
-                        <img src="assets/images/logo/offcanvas-logo.png" alt="">
+                        <img src="assets/images/logo/offcanvas-logo.png" alt="" class="offcanvas-logo">
                     </a>
                     <button id="offcanvas-close" class="offcanvas-close bg-primary py-7 px-[38px]"
                         aria-label="offcanvas">
