--- a/SunnyMore/index.html
+++ b/SunnyMore/index.html
@@ -896,7 +896,7 @@
                             class="flex flex-wrap flex-col absolute bottom-0 right-0 md:right-[170px] lg:right-[-30px] z-10">
                             <span
                                 class="text-black-800 text-[65px] xl:text-[80px] font-bold font-Syne leading-none inline-block relative before:rounded-full before:bg-primary before:block before:absolute before:top-[50%] before:left-[-13px] before:-z-[1] before:w-[95px] lg:before:w-[100px] xl:before:w-[110px] before:h-[95px] lg:before:h-[100px] xl:before:h-[110px] before:translate-y-[-50%]">8+</span>
-                            <span class="strock-text mt-5">Years of <br/> industry <br/>experience</span>
+                            <span class="strock-text mt-5">Years of <br /> industry <br />experience</span>
 
                         </div>
                     </div>
@@ -909,7 +909,11 @@
 
                         <h4 class="text-black-800 text-2xl lg:text-3xl xl:text-[35px] mt-3 mb-4">Based in Vadodara,
                             Gujarat</h4>
-                        <p class="paragraph mb-6">I design intuitive and scalable digital experiences with a strong focus on usability and visual clarity. I specialize in end-to-end UI/UX design, from research and wireframes to high-fidelity interfaces and prototypes. Using UX principles and AI-driven tools, I create efficient workflows and engaging digital products that deliver real results.</p>
+                        <p class="paragraph mb-6">I design intuitive and scalable digital experiences with a strong
+                            focus on usability and visual clarity. I specialize in end-to-end UI/UX design, from
+                            research and wireframes to high-fidelity interfaces and prototypes. Using UX principles and
+                            AI-driven tools, I create efficient workflows and engaging digital products that deliver
+                            real results.</p>
                         <ul class="flex flex-wrap gap-9 2xl:gap-[40px] mb-7">
                             <li>
 
@@ -929,7 +933,7 @@
                                     class="text-black-800 text-[32px] font-bold font-Syne leading-10 relative before:rounded-full before:bg-black-300 before:block before:absolute before:top-[0px] before:left-0 before:right-0 before:-z-[1] before:w-[43px] before:h-[43px]">06</span>
                                 <p class="paragraph">Cross-Functional Teams</p>
                             </li>
-                            
+
                         </ul>
 
                         <div class="flex flex-wrap">
@@ -1304,7 +1308,7 @@
                         </div>
                     </div>
 
-                    <div class="col-span-12 md:col-span-6" data-aos="fade-up" data-aos-delay="300">
+                    <div class="col-span-12 md:col-span-4" data-aos="fade-up" data-aos-delay="300">
                         <div class="rounded-[20px] overflow-hidden mb-6">
                             <img src="assets/images/projects/project1.png" alt="project1">
                         </div>
@@ -1319,7 +1323,7 @@
                             <div
                                 class="flex flex-wrap items-center justify-between text-black-800 hover:text-orange group">
                                 <h4
-                                    class="font-bold font-Syne text-center leading-10 text-[20px] lg:text-[24px] xl:text-[32px] capitalize">
+                                    class="font-bold font-Syne text-center leading-10 text-[20px] lg:text-[24px] xl:text-[28px] capitalize">
                                     <a class="transition-all" href="project-details.html">Basinik Finance App</a>
                                 </h4>
                                 <a class="group-hover:animate-arrow-move-up" href="project-details.html">
@@ -1338,9 +1342,9 @@
                         </div>
                     </div>
 
-                    <div class="col-span-12 md:col-span-6" data-aos="fade-up" data-aos-delay="500">
+                    <div class="col-span-12 md:col-span-4" data-aos="fade-up" data-aos-delay="500">
                         <div class="rounded-[20px] overflow-hidden mb-6">
-                            <img src="assets/images/projects/project2.png" alt="project1">
+                            <img src="assets/images/projects/project2.png" alt="project2">
                         </div>
                         <div class="flex flex-wrap flex-col gap-3">
                             <div class="flex flex-wrap gap-2">
@@ -1353,8 +1357,42 @@
                             <div
                                 class="flex flex-wrap items-center justify-between text-black-800 hover:text-orange group">
                                 <h4
-                                    class="font-bold font-Syne text-center leading-10 text-[20px] lg:text-[24px] xl:text-[32px] capitalize">
+                                    class="font-bold font-Syne text-center leading-10 text-[20px] lg:text-[24px] xl:text-[28px] capitalize">
                                     <a class="transition-all" href="project-details.html">Oxilex Dashboard design</a>
+                                </h4>
+                                <a class="group-hover:animate-arrow-move-up" href="project-details.html">
+                                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M30.8839 9.11612C31.372 9.60427 31.372 10.3957 30.8839 10.8839L10.8839 30.8839C10.3957 31.372 9.60427 31.372 9.11612 30.8839C8.62796 30.3957 8.62796 29.6043 9.11612 29.1161L29.1161 9.11612C29.6043 8.62796 30.3957 8.62796 30.8839 9.11612Z"
+                                            fill="currentColor" fill-opacity="0.9" />
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M12.5 10C12.5 9.30964 13.0596 8.75 13.75 8.75H30C30.6904 8.75 31.25 9.30964 31.25 10V26.25C31.25 26.9404 30.6904 27.5 30 27.5C29.3096 27.5 28.75 26.9404 28.75 26.25V11.25H13.75C13.0596 11.25 12.5 10.6904 12.5 10Z"
+                                            fill="currentColor" fill-opacity="0.9" />
+                                    </svg>
+
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-span-12 md:col-span-4" data-aos="fade-up" data-aos-delay="700">
+                        <div class="rounded-[20px] overflow-hidden mb-6">
+                            <img src="assets/images/projects/project3.png" alt="project3">
+                        </div>
+                        <div class="flex flex-wrap flex-col gap-3">
+                            <div class="flex flex-wrap gap-2">
+                                <a class="text-xs text-black-text-800 uppercase font-medium font-Inter leading-none py-[6px] px-4 rounded-[40px] border border-black-text-400 transition-all hover:bg-active hover:border-active hover:text-white"
+                                    href="projects.html">WEB</a>
+                                <a class="text-xs text-black-text-800 uppercase font-medium font-Inter leading-none py-[6px] px-4 rounded-[40px] border border-black-text-400 transition-all hover:bg-active hover:border-active hover:text-white"
+                                    href="projects.html">UI/UX</a>
+
+                            </div>
+                            <div
+                                class="flex flex-wrap items-center justify-between text-black-800 hover:text-orange group">
+                                <h4
+                                    class="font-bold font-Syne text-center leading-10 text-[20px] lg:text-[24px] xl:text-[28px] capitalize">
+                                    <a class="transition-all" href="project-details.html">Cryptocurrency App</a>
                                 </h4>
                                 <a class="group-hover:animate-arrow-move-up" href="project-details.html">
                                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
