--- a/SunnyMore/index.html
+++ b/SunnyMore/index.html
@@ -1256,7 +1256,18 @@
 
                                 <div
                                     class="pt-[30px] px-7 pb-7 bg-black-500 rounded-2xl transition-all hover:shadow-2xl hover:bg-white flex flex-wrap gap-4 items-start">
-                                    <img class="items-start" src="assets/images/skills/bootstrap.png" alt="Bootstrap">
+                                    <svg class="items-start" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <rect width="48" height="48" rx="8" fill="#7952B3" />
+                                        <path
+                                            d="M16.5 14H26.25C27.7418 14 29.1726 14.5926 30.2275 15.6477C31.2824 16.7027 31.875 18.1332 31.875 19.625C31.875 21.1168 31.2824 22.5473 30.2275 23.6023C29.1726 24.6574 27.7418 25.25 26.25 25.25H16.5V14Z"
+                                            stroke="white" stroke-width="2.5" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                        <path
+                                            d="M16.5 25.25H27.75C29.2418 25.25 30.6726 25.8426 31.7275 26.8977C32.7824 27.9527 33.375 29.3832 33.375 30.875C33.375 32.3668 32.7824 33.7973 31.7275 34.8523C30.6726 35.9074 29.2418 36.5 27.75 36.5H16.5V25.25Z"
+                                            stroke="white" stroke-width="2.5" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
                                     <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                         <h4 class="font-bold font-Syne leading-normal text-xl text-black-800">Bootstrap
                                             / WordPress</h4>
@@ -1267,7 +1278,17 @@
 
                                 <div
                                     class="pt-[30px] px-7 pb-7 bg-black-500 rounded-2xl transition-all hover:shadow-2xl hover:bg-white flex flex-wrap gap-4 items-start">
-                                    <img class="items-start" src="assets/images/skills/ux.png" alt="UX">
+                                    <svg class="items-start" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <rect width="48" height="48" rx="8" fill="#6366F1" />
+                                        <circle cx="24" cy="20" r="6" stroke="white" stroke-width="2.5" />
+                                        <path d="M14 36C14 30.4772 18.4772 26 24 26C29.5228 26 34 30.4772 34 36"
+                                            stroke="white" stroke-width="2.5" stroke-linecap="round" />
+                                        <path d="M36 14L40 18L36 22" stroke="white" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M12 14L8 18L12 22" stroke="white" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
                                     <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                         <h4 class="font-bold font-Syne leading-normal text-xl text-black-800">UX
                                             Research & Flows</h4>
